k8s/discounts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discounts-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discounts
  template:
    metadata:
      labels:
        app: discounts
    spec:
      containers:
        - name: discounts
          image: rimo9docker/rimo-restauranty-discounts:latest
          ports:
            - containerPort: 3002
