k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
