k8s/items-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: items
spec:
  selector:
    app: items
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
  type: ClusterIP
