k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restaurant-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/auth/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth
                port:
                  number: 3001
          - path: /api/discounts/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: discounts
                port:
                  number: 3002
          - path: /api/items/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: items
                port:
                  number: 3003
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80
